# uconfig

./: .gitignore  uconfig-device
.github/workflows/: build.yml
device/: capabilities.uc  config.uc  context.uc  protocol.uc  settings.uc  ubus.uc
openwrt/uconfig/: Makefile
openwrt/uconfig/files-render/etc/uci-defaults/: 99-uconfig
openwrt/uconfig/files-render/lib/uconfig/: wifi-detect.uc
openwrt/uconfig/files-server/etc/uconfig/: server.conf  server.crt  server.key  uconfig.cfg.0000000001  users
openwrt/uconfig/modules/: mdns.defaults
openwrt/udhcpsnoop/: Makefile
openwrt/ufp/: Makefile
openwrt/uwsd/: Makefile
openwrt/uwsd/patches/: 0001-script-fix-compile-error.patch
render/examples/: default.json  factory.json
render/lib/: services.uc  wiphy.uc
render/modules/ieee8021x/: ieee8021x.uc
render/modules/mdns/: mdns.uc
render/schema/: interface.ssid.yml  radio.yml  service.ieee8021x.yml  service.yml
render/schema-generated/: schema.json
render/system/: capabilities.uc
render/uconfig/: uconfig.uc
render/uconfig/templates/: radio.uc  toplevel.uc
render/uconfig/templates/interface/: ssid.uc
render/uconfig/templates/services/: web-ui.uc
render/ureader/: schema.uc
render/ureader-modules/: schemaServiceIeee8021x.uc
server/: config.uc  handler.uc  rpc.uc  settings.uc  ubus.uc  upload.uc  users.uc  wizard.uc
server/admin/: config.uc  delegate.uc  event.uc  get.uc  system.uc  user.uc
server/device/: delegate.uc  methods.uc
server/www/: agent.js  index.html
src/: CMakeLists.txt  device.h  ucode.c  websocket.c
state/: state.uc
(+1 files in other folders)
